fix(DiscoverCard): fix title icon position and title text vertical alignment

--- a/src/components/DiscoverCard/DiscoverCard.css
+++ b/src/components/DiscoverCard/DiscoverCard.css
@@ -71,16 +71,12 @@
   line-height: 30px;
   height: 30px;
   @apply --text-overflow-ellipsis;
-
-  & span {
-    vertical-align: middle;
-  }
 }
-
 
 .icon {
   display: inline-block;
   margin-right: 4px;
+  margin-top: -4px;
   fill: currentColor;
 }
 
